# flask-blog

./: .env copy  .gitignore  LICENSE  README.md  pyproject.toml  settings.toml
app/: app.py
app/blueprints/api/: __init__.py
app/blueprints/web/: __init__.py  auth_controller.py  home_controller.py
app/blueprints/web/auth/: auth_controller.py
app/blueprints/web/superuser/: superuser_controller.py
app/core/: create_superuser.py  init_roles.py
app/ext/: commands.py  config.py  configuration.py  flask-sql-alchemy.py  flask_login.py  flask_migration.py  flask_sql_alchemy.py  flask_wtf.py
app/middlewares/: csrf_token_middleware.py  is_superuser_middleware.py  login_is_required_middleware.py  superuser_middleware.py
app/models/: __init__.py  model_mixin.py  roles_model.py  users_model.py  users_roles_model.py
app/static/css/: admin.css  auth.css  style.css
app/templates/: base.html  index.html
app/templates/admin/: base.html  home.html
app/templates/auth/: base.html  login.html  register.html
app/templates/manager/: base.html  index.html
app/templates/manager/users/: list_users.html
migrations/versions/: 2ced4434fdb0_initial_migration.py  474e8fb5c15a_.py  82637851f113_.py  a0091f7f6b47_.py  b02ff5aebb51_.py  f1ea4b104e05_initial_migration.py
