[tool.poetry]
name = "flask-blog"
version = "1.0.0"
description = "A simple blog with Flask in Python"
authors = ["jacksonsr451 <jackson.severino.rocha@escola.pr.gov.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
dynaconf = "^3.1.9"
Flask-RESTful = "^0.3.9"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
